2010-07-03  Matevz Tadel  <matevz.tadel@ijs.si>

	Instantiate TThread with GThread to allow broken ROOT's TSD
	implementation to work properly.

	* Gled/GThread.cxx:
	* Gled/GThread.h:
	Instantiate / delete TThread representation in spawner / reaper
	functions.
	Provide extra ClearRootTThreadRepresentation() method to allow
	Rint thread to delete it instantly (as root does not want TThread
	to exist for its "main" thread).

	* Gled/Gled.cxx:
	Destroy TThread for Rint thread early in Rint spawner function.

2010-07-03  Matevz Tadel  <matevz.tadel@ijs.si>

	Add support for handling of arbitrary cross-thread requests into
	Rint thread.

	* Gled/TRootXTReq.cxx:
	* Gled/TRootXTReq.h:
	New class for handling of cross-thread requests into the Rint
	thread.

	* Gled/XTReqCanvas.cxx:
	* Gled/XTReqCanvas.h:
	Cross-thread request for creation of a new TCanvas.

	* Gled/Gled.cxx:
	* Gled/Gled.h:
	Activate TRootXTReq singals/queues in Rint thread spawner.
	Remove function NewCanvas().

	* GledView/GledGUI.cxx:
	* GledView/GledGUI.h:
	Remove function NewCanvas().

2010-07-03  Matevz Tadel  <matevz.tadel@ijs.si>

	Improve cancellation of dedicated MIR execution threads.

	* Gled/GThread.cxx:
	* Gled/GThread.h:
	Add flag allowing to detach an otherwise joinable thread on exit
	from the thread function.
	Add additional static lock for synchronization of detach-state
	requests and queries.
	Add static method Yield() that pushes the calling thread to the
	end of thread execution queue.

	* Ephra/Saturn.cxx:
	Properly implement cancellation / handling of dedicated MIR
	execution threads by using the new detach-on-exit capability in
	GThread.

2010-06-27  Matevz Tadel  <matevz.tadel@ijs.si>

	Rewrite signal handling to support proper per-thread signal
	handlers. And more ...

	* Gled/GThread.cxx:
	* Gled/GThread.h:
	Add members for controlling per-thread signal handlers.
	Add exit policy on terminal signal -- just exit thread or call
	Gled::Exit() or do system exit.