@@ -9,7 +9,12 @@
 
 #include <Gled/TRootXTReq.h>
 
+class TVirtualPad;
 class TCanvas;
+
+//------------------------------------------------------------------------------
+// XTReqCanvas
+//------------------------------------------------------------------------------
 
 class XTReqCanvas : public TRootXTReq
 {
@@ -28,10 +33,36 @@ public:
     TRootXTReq("XTReqCanvas"),
     fName(name), fTitle(title),
     fW(w), fH(h), fNPx(npx), fNPy(npy),
-    fCanvas(0) {}
-
+    fCanvas(0)
+  {}
   virtual ~XTReqCanvas() {}
 
-}; // endclass XTReqCanvas
+  static TCanvas* Request(const char* name ="Gled Canvas",
+			  const char* title="Default Gled Canvas",
+			  int w=640, int h=480, int npx=1, int npy=1);
+};
+
+
+//------------------------------------------------------------------------------
+// XTReqPadUpdate
+//------------------------------------------------------------------------------
+
+class XTReqPadUpdate : public TRootXTReq
+{
+  TVirtualPad *fPad;
+
+  virtual void Act();
+
+public:
+  // Output
+
+  XTReqPadUpdate(TVirtualPad* p) :
+    TRootXTReq("XTReqPadUpdate"),
+    fPad(p)
+  {}
+  virtual ~XTReqPadUpdate() {}
+
+  static void Update(TVirtualPad* p);
+};
 
 #endif
